- Remove generics from Polygon - Use interface for animation callback - Rename AddVLStrategy to AreaAlgorithm - Add new Merge Algorithm - Extract AddVisibilityLines as separate algorithm